Fix z-index
Solve links not clickable problem

--- a/css/cover.css
+++ b/css/cover.css
@@ -25,7 +25,6 @@ body {
     margin-left: -200px;
     color: #ffffff;
     text-align: center;
-    z-index: -1;
 }
 
 @media only screen and (max-width: 400px) {
