--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,9 @@ body {
 .alert {
     border-radius: 0px;
     padding: 10px;
+    position: absolute;
+    width: 100%;
+    z-index: 100;
 }
 
 /* sticky footer */
